objects/vlocity_ins__GroupCensus__c.object
<CustomObject>
    <description>A census provides a snapshot of statistics about the eligible members of a group (i.e. employees) and their legal dependents. Census may be used in quoting and rating as well as the subsequent enrollment process. Master-detail child object of an Employer/Group Account.</description>
    <fields>
        <fullName>vlocity_ins__AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CensusNumber__c</fullName>
        <externalId>true</externalId>
        <label>Census Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CensusSource__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__CensusStatus__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__CensusType__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__CountOfCobra__c</fullName>
        <label>No. Cobra</label>
        <summaryFilterItems>
            <field>vlocity_ins__GroupCensusMember__c.vlocity_ins__MemberType__c</field>
            <operation>equals</operation>
            <value>Cobra</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__GroupCensusMember__c.vlocity_ins__CensusId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CountOfDeclined__c</fullName>
        <label>No. Declined</label>
        <summaryFilterItems>
            <field>vlocity_ins__GroupCensusMember__c.vlocity_ins__MemberType__c</field>
            <operation>equals</operation>
            <value>Declined</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__GroupCensusMember__c.vlocity_ins__CensusId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CountOfEmployeeOnly__c</fullName>
        <label>No. Employee Only</label>
        <summaryFilterItems>
            <field>vlocity_ins__GroupCensusMember__c.vlocity_ins__HasSpouse__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>vlocity_ins__GroupCensusMember__c.vlocity_ins__NumberOfDependents__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>vlocity_ins__GroupCensusMember__c.vlocity_ins__IsPrimaryMember__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__GroupCensusMember__c.vlocity_ins__CensusId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CountOfEmployeePlusChild__c</fullName>
        <label>No. Employee + Child</label>
        <summaryFilterItems>
            <field>vlocity_ins__GroupCensusMember__c.vlocity_ins__NumberOfDependents__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>vlocity_ins__GroupCensusMember__c.vlocity_ins__HasSpouse__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>vlocity_ins__GroupCensusMember__c.vlocity_ins__IsPrimaryMember__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__GroupCensusMember__c.vlocity_ins__CensusId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CountOfEmployeePlusFamily__c</fullName>
        <label>No. Employee + Family</label>
        <summaryFilterItems>
            <field>vlocity_ins__GroupCensusMember__c.vlocity_ins__IsFamily__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>vlocity_ins__GroupCensusMember__c.vlocity_ins__IsPrimaryMember__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__GroupCensusMember__c.vlocity_ins__CensusId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CountOfEmployeePlusSpouse__c</fullName>
        <label>No. Employee + Spouse</label>
        <summaryFilterItems>
            <field>vlocity_ins__GroupCensusMember__c.vlocity_ins__HasSpouse__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>vlocity_ins__GroupCensusMember__c.vlocity_ins__NumberOfDependents__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>vlocity_ins__GroupCensusMember__c.vlocity_ins__IsPrimaryMember__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__GroupCensusMember__c.vlocity_ins__CensusId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CountOfEmployeesPlusDependents__c</fullName>
        <label>Total Employees + Dependents</label>
        <summaryForeignKey>vlocity_ins__GroupCensusMember__c.vlocity_ins__CensusId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CountOfEmployees__c</fullName>
        <label>Total Employees</label>
        <summaryFilterItems>
            <field>vlocity_ins__GroupCensusMember__c.vlocity_ins__IsPrimaryMember__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__GroupCensusMember__c.vlocity_ins__CensusId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CountOfFullTime__c</fullName>
        <label>No. Full Time</label>
        <summaryFilterItems>
            <field>vlocity_ins__GroupCensusMember__c.vlocity_ins__MemberType__c</field>
            <operation>equals</operation>
            <value>Full Time</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__GroupCensusMember__c.vlocity_ins__CensusId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CountOfPartTime__c</fullName>
        <label>No. Part Time</label>
        <summaryFilterItems>
            <field>vlocity_ins__GroupCensusMember__c.vlocity_ins__MemberType__c</field>
            <operation>equals</operation>
            <value>Part Time</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__GroupCensusMember__c.vlocity_ins__CensusId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplayAlert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GroupId__c</fullName>
        <label>Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Census</relationshipLabel>
        <relationshipName>Census1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SpecProduct2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Census</relationshipLabel>
        <relationshipName>GroupCensus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SumOfFte__c</fullName>
        <label>No. FTE</label>
        <summarizedField>vlocity_ins__GroupCensusMember__c.vlocity_ins__FTE__c</summarizedField>
        <summaryForeignKey>vlocity_ins__GroupCensusMember__c.vlocity_ins__CensusId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalEmployeesPlusDependents__c</fullName>
        <description>This field is deprecated, please use CountOfEmployeesPlusDependents__c</description>
        <formula>vlocity_ins__CountOfEmployeeOnly__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Employees + Dependents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Census</label>
    <nameField>
        <label>Census Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Census</pluralLabel>
    <recordTypes>
        <fullName>vlocity_ins__LargeGroup</fullName>
        <active>true</active>
        <label>Large Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__SmallGroup</fullName>
        <active>true</active>
        <label>Small Group</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>